syntax = "proto3";
package cluster;

import "command/command.proto";

option go_package = "github.com/rqlite/rqlite/cluster";

message Credentials {
    string username = 1;
    string password = 2;
}

message Address {
	string url = 1;
}

message Command {
    enum Type {
        COMMAND_TYPE_UNKNOWN = 0;
        COMMAND_TYPE_GET_NODE_API_URL = 1;
        COMMAND_TYPE_EXECUTE = 2;
        COMMAND_TYPE_QUERY = 3;
    }
    Type type = 1;

    oneof request {
        command.ExecuteRequest execute_request = 2;
        command.QueryRequest query_request = 3;
    }

    Credentials credentials = 4;
}

message CommandExecuteResponse {
	string error = 1;
	repeated command.ExecuteResult results = 2;
}

message CommandQueryResponse {
	string error = 1;
	repeated command.QueryRows rows = 2;
}
